--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -1,41 +1,40 @@
-<section class="section">
-  <div class="row">
-    <!-- left right content code start -->
-    <div class="col-lg-9 col-md-12 col-xl-9">
-      <div class="row first_row mb-4 mt-4">
-        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-          <div class="section-header-breadcrumb-content">
-            <h1 class="font-23 mb-1">Hello, Mr {{userData.userName}}!</h1>
-            <span class="text-muted font-weight-bolder">Welcome back to insurance portal Admin</span>
-            <form #filterForm="ngForm">
-              <select [(ngModel)]="filter" name="Filter"
-                class="filter-select-dashboard font-weight-600 float-lg-right float-md-right form-control mt-lg-5 mt-md-5 mt-sm-2 width-per-35">
+<section class="section mt-4">
+    <div class="row">
+        <!-- left right content code start -->
+        <div class="col-lg-9 col-md-12 col-xl-9">
+            <div class="row first_row mb-4">
+                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                    <div class="section-header-breadcrumb-content">
+                        <h1 class="font-23 mb-1">Hello, Mr {{userData.userName}}!</h1>
+                        <span class="text-muted font-weight-bolder">Welcome back to insurance portal Admin</span>
+                        <form #filterForm="ngForm">
+                            <select [(ngModel)]="filter" name="Filter" class="filter-select-dashboard font-weight-600 float-lg-right float-md-right form-control mt-lg-5 mt-md-5 mt-sm-2 width-per-35">
                 <option *ngFor="let item of filters" [value]="item.value">{{item.option}}</option>
               </select>
-            </form>
-          </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                    <app-sale-widget></app-sale-widget>
+                </div>
+            </div>
+            <app-note-widget [_filter]="filter"></app-note-widget>
+            <div class="row third_row dashboard-box mr-0">
+                <div class="col-md-6 third_row_first_col">
+                    <app-quote-widget [_filter]="filter"></app-quote-widget>
+                </div>
+                <div class="col-md-6 bg-white rounded text-dark third_row_second_col">
+                    <h4 class="font-15 mt-4 text-muted">Activity List</h4>
+                    <app-basket-widget [_filter]="filter"></app-basket-widget>
+                </div>
+            </div>
         </div>
-        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-          <app-sale-widget></app-sale-widget>
-        </div>
-      </div>
-      <app-note-widget [_filter]="filter"></app-note-widget>
-      <div class="row third_row dashboard-box mr-0">
-        <div class="col-md-6 third_row_first_col">
-          <app-quote-widget [_filter]="filter"></app-quote-widget>
-        </div>
-        <div class="col-md-6 bg-white rounded text-dark third_row_second_col">
-          <h4 class="font-15 mt-4 text-muted">Activity List</h4>
-          <app-basket-widget [_filter]="filter"></app-basket-widget>
-        </div>
-      </div>
-    </div>
-    <!-- left right content code End -->
+        <!-- left right content code End -->
 
-    <!-- right side bar code start -->
-    <div class="col-md-12 col-lg-3 col-xl-3 mb-2">
-      <app-issue-widget></app-issue-widget>
+        <!-- right side bar code start -->
+        <div class="col-md-12 col-lg-3 col-xl-3 mb-2 top-0">
+            <app-issue-widget></app-issue-widget>
+        </div>
+        <!-- right side bar code end -->
     </div>
-    <!-- right side bar code end -->
-  </div>
 </section>
