--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,41 +1,40 @@
 <section class="login-wrapper">
-  <div class="align-items-center d-flex form-wrapper h-100">
-    <div class="container">
-      <div class="row align-items-end">
-        <div class="col-md-12 text-center">
-          <figure class="mb-3">
-            <a [routerLink]="['']">
-              <img src="assets/img/logo.png" class="img-fluid" />
-            </a>
-          </figure>
-          <p style="color: #292e41; font-weight: bold">Welcome to my account</p>
+    <div class="align-items-center d-flex form-wrapper h-100">
+        <div class="container">
+            <div class="row align-items-end">
+                <div class="col-md-12 text-center">
+                    <figure class="mb-3">
+                        <a [routerLink]="['']">
+                            <img src="assets/img/logo.png" class="img-fluid" />
+                        </a>
+                    </figure>
+                    <p style="color: #292e41; font-weight: bold">Welcome to my account</p>
+                </div>
+            </div>
+            <div class="row justify-content-center mt-4 text-center">
+                <div class="col-md-6">
+                    <div class="dashboard-login">
+                        <form [formGroup]="loginForm" (ngSubmit)="onSubmit(loginForm.valid)">
+                            <div class="form-group">
+                                <input id="email" type="email" formControlName="userId" placeholder="Email" class="form-control" />
+                                <div *ngIf="loginForm.get('userId').invalid && loginForm.get('userId').touched" class="error">
+                                    Email/UserName is required</div>
+                            </div>
+                            <div class="form-group">
+                                <input id="password" type="password" formControlName="password" class="form-control" placeholder="Password" />
+                                <div *ngIf="loginForm.get('password').invalid && loginForm.get('password').touched" class="error">
+                                    Password is required</div>
+                            </div>
+                            <div class="form-group mt-5">
+                                <button type="submit" class="btn btn-primary rounded-pill w-25">Login</button>
+                            </div>
+                            <div class="form-group">
+                                <a [routerLink]="['/auth/forgot-password']" class="text-dark">Forgot Password? Reset it.</a>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="row justify-content-center mt-4 text-center">
-        <div class="col-md-6">
-          <div class="dashboard-login">
-            <form [formGroup]="loginForm" (ngSubmit)="onSubmit(loginForm.valid)">
-              <div class="form-group">
-                <input id="email" type="email" formControlName="userId" placeholder="Email" class="form-control" />
-                <div *ngIf="loginForm.get('userId').invalid && loginForm.get('userId').touched" class="error">
-                  Email/UserName is required</div>
-              </div>
-              <div class="form-group">
-                <input id="password" type="password" formControlName="password" class="form-control"
-                  placeholder="Password" />
-                <div *ngIf="loginForm.get('password').invalid && loginForm.get('password').touched" class="error">
-                  Password is required</div>
-              </div>
-              <div class="form-group mt-5">
-                <button type="submit" class="btn btn-primary rounded-pill w-50">Login</button>
-              </div>
-              <div class="form-group">
-                <a [routerLink]="['/auth/forgot-password']" class="text-dark">Forgot Password? Reset it.</a>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
     </div>
-  </div>
 </section>
