--- a/src/app/basket-details/urgent-ncd/urgent-ncd.component.html
+++ b/src/app/basket-details/urgent-ncd/urgent-ncd.component.html
@@ -1,156 +1,151 @@
 <h2 class="bg-blue-grey font-17 mb-0 p-15 pl-4 pt-2 pb-2">Car Register #{{currentData}}</h2>
 <form [formGroup]="basketDetailForm" (ngSubmit)="submitHandler(basketDetailForm.valid)">
-  <div class="pl-4 row">
-    <div class="col-md-6 border-right pl-4 pr-5">
-      <div class="form-group row mt-3">
-        <label for="inputEmail3" class="col-sm-3 col-form-label">Car Reg. No.</label>
-        <div class="col-sm-9">
-          <input type="text" class="form-control" formControlName="vehiclePlateNo" readonly>
+    <div class="pl-4 row">
+        <div class="col-md-6 border-right pl-4 pr-5">
+            <div class="form-group row mt-3">
+                <label for="inputEmail3" class="col-sm-3 col-form-label">Car Reg. No.</label>
+                <div class="col-sm-9">
+                    <input type="text" class="form-control" formControlName="vehiclePlateNo" readonly>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-3 col-form-label">Model Car</label>
+                <div class="col-sm-9">
+                    <input type="text" class="form-control" formControlName="carModel" readonly>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-3 col-form-label">Name</label>
+                <div class="col-sm-9">
+                    <input type="text" class="form-control" formControlName="customerName" readonly>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-3 col-form-label">NRIC</label>
+                <div class="col-sm-9">
+                    <input type="text" class="form-control" formControlName="nric" readonly>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-3 col-form-label">Takaful Name</label>
+                <div class="col-sm-9">
+                    <input type="text" class="form-control" formControlName="principal" readonly>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-3 col-form-label">Cover Type</label>
+                <div class="col-sm-9">
+                    <input type="text" class="form-control" formControlName="coverType" readonly>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-3 col-form-label">Sum Insured</label>
+                <div class="col-sm-9">
+                    <input type="text" class="form-control" formControlName="sumInsured" readonly>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-3 col-form-label">Extra Coverage</label>
+                <div class="col-sm-9">
+                    <input type="text" class="form-control" formControlName="coverage" readonly>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-3 col-form-label">NCD Effective Date</label>
+                <div class="col-sm-9">
+                    <input class="form-control" formControlName="effectiveDate" readonly>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-3 col-form-label">Phone Number</label>
+                <div class="col-sm-9">
+                    <input type="text" class="form-control" formControlName="phoneNo" readonly>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-3 col-form-label">Email</label>
+                <div class="col-sm-9">
+                    <input type="text" class="form-control" formControlName="email" readonly>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-3 col-form-label">Address</label>
+                <div class="col-sm-9">
+                    <input type="text" class="form-control form-group" formControlName="address1" readonly>
+                    <input type="text" class="form-control " formControlName="address2" readonly>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-3 col-form-label">Postcode</label>
+                <div class="col-sm-9">
+                    <input type="text" class="form-control" formControlName="postcode" readonly>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-3 col-form-label">Status</label>
+                <div class="col-sm-9">
+                    <input type="text" class="form-control" formControlName="status" readonly>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-3 col-form-label">Remarks</label>
+                <div class="col-sm-9">
+                    <textarea class="form-control" rows="3" formControlName="remarks"></textarea>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="form-group row">
-        <label for="inputEmail3" class="col-sm-3 col-form-label">Model Car</label>
-        <div class="col-sm-9">
-          <input type="text" class="form-control" formControlName="carModel" readonly>
-        </div>
-      </div>
-      <div class="form-group row">
-        <label for="inputEmail3" class="col-sm-3 col-form-label">Name</label>
-        <div class="col-sm-9">
-          <input type="text" class="form-control" formControlName="customerName" readonly>
-        </div>
-      </div>
-      <div class="form-group row">
-        <label for="inputEmail3" class="col-sm-3 col-form-label">NRIC</label>
-        <div class="col-sm-9">
-          <input type="text" class="form-control" formControlName="nric" readonly>
-        </div>
-      </div>
-      <div class="form-group row">
-        <label for="inputEmail3" class="col-sm-3 col-form-label">Takaful Name</label>
-        <div class="col-sm-9">
-          <input type="text" class="form-control" formControlName="principal" readonly>
-        </div>
-      </div>
-      <div class="form-group row">
-        <label for="inputEmail3" class="col-sm-3 col-form-label">Cover Type</label>
-        <div class="col-sm-9">
-          <input type="text" class="form-control" formControlName="coverType" readonly>
-        </div>
-      </div>
-      <div class="form-group row">
-        <label for="inputEmail3" class="col-sm-3 col-form-label">Sum Insured</label>
-        <div class="col-sm-9">
-          <input type="text" class="form-control" formControlName="sumInsured" readonly>
-        </div>
-      </div>
-      <div class="form-group row">
-        <label for="inputEmail3" class="col-sm-3 col-form-label">Extra Coverage</label>
-        <div class="col-sm-9">
-          <input type="text" class="form-control" formControlName="coverage" readonly>
-        </div>
-      </div>
-      <div class="form-group row">
-        <label for="inputEmail3" class="col-sm-3 col-form-label">NCD Effective Date</label>
-        <div class="col-sm-9">
-          <input class="form-control" formControlName="effectiveDate" readonly>
-        </div>
-      </div>
-      <div class="form-group row">
-        <label for="inputEmail3" class="col-sm-3 col-form-label">Phone Number</label>
-        <div class="col-sm-9">
-          <input type="text" class="form-control" formControlName="phoneNo" readonly>
-        </div>
-      </div>
-      <div class="form-group row">
-        <label for="inputEmail3" class="col-sm-3 col-form-label">Email</label>
-        <div class="col-sm-9">
-          <input type="text" class="form-control" formControlName="email" readonly>
-        </div>
-      </div>
-      <div class="form-group row">
-        <label for="inputEmail3" class="col-sm-3 col-form-label">Address</label>
-        <div class="col-sm-9">
-          <input type="text" class="form-control form-group" formControlName="address1" readonly>
-          <input type="text" class="form-control " formControlName="address2" readonly>
-        </div>
-      </div>
-      <div class="form-group row">
-        <label for="inputEmail3" class="col-sm-3 col-form-label">Postcode</label>
-        <div class="col-sm-9">
-          <input type="text" class="form-control" formControlName="postcode" readonly>
-        </div>
-      </div>
-      <div class="form-group row">
-        <label for="inputEmail3" class="col-sm-3 col-form-label">Status</label>
-        <div class="col-sm-9">
-          <input type="text" class="form-control" formControlName="status" readonly>
-        </div>
-      </div>
-      <div class="form-group row">
-        <label for="inputEmail3" class="col-sm-3 col-form-label">Remarks</label>
-        <div class="col-sm-9">
-          <textarea class="form-control" rows="3" formControlName="remarks"></textarea>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6">
-      <div class="form-group row mt-3  pl-4 pr-5">
-        <label class="col-form-label col-sm-4 font-weight-bold align-self-center">Step Procedure</label>
-      </div>
-      <div class="form-group row  pl-4 pr-5">
-        <label class="col-sm-5 col-form-label font-weight-bold">1. Check & Update (NCD)</label>
-        <div class="col-sm-5">
-          <a (click)="goToLink('https://www.mycarinfo.com.my/ncdcheck/online')"
-            class="bg-light-blue border-0 btn btn-lg text-white">Click Here</a>
-        </div>
-      </div>
-      <div class="form-group row  pl-4 pr-5">
-        <label class="col-sm-5 col-form-label font-weight-bold">2. Requote</label>
-        <div class="col-sm-5">
-          <a (click)="goToLink('https://www.oto.my/tool/road-tax-calculator/')"
-            class="bg-light-blue border-0 btn btn-lg text-white">Click Here</a>
-        </div>
-      </div>
-      <div class="form-group row  pl-4 pr-5">
-        <label class="col-sm-5 col-form-label font-weight-bold">3. Action</label>
-        <div class="col-sm-7">
-          <select class="form-control w-75 form-group" formControlName="action"
-            (ngModelChange)="onActionSelectorChanged($event)">
+        <div class="col-md-6">
+            <div class="form-group row mt-3  pl-4 pr-5">
+                <label class="col-form-label col-sm-4 font-weight-bold align-self-center">Step Procedure</label>
+            </div>
+            <div class="form-group row  pl-4 pr-5">
+                <label class="col-sm-5 col-form-label font-weight-bold">1. Check & Update (NCD)</label>
+                <div class="col-sm-5">
+                    <a (click)="goToLink('https://www.mycarinfo.com.my/ncdcheck/online')" class="bg-light-blue border-0 btn btn-lg text-white">Click Here</a>
+                </div>
+            </div>
+            <div class="form-group row  pl-4 pr-5">
+                <label class="col-sm-5 col-form-label font-weight-bold">2. Requote</label>
+                <div class="col-sm-5">
+                    <a (click)="goToLink('https://www.oto.my/tool/road-tax-calculator/')" class="bg-light-blue border-0 btn btn-lg text-white">Click Here</a>
+                </div>
+            </div>
+            <div class="form-group row  pl-4 pr-5">
+                <label class="col-sm-5 col-form-label font-weight-bold">3. Action</label>
+                <div class="col-sm-7">
+                    <select class="form-control w-75 form-group" formControlName="action" (ngModelChange)="onActionSelectorChanged($event)">
             <option disabled selected value='null'>Select</option>
             <option *ngFor="let action of actionList" value="{{action.value}}">{{action.option}}</option>
           </select>
 
-          <ng-container [ngSwitch]="actionSelector">
+                    <ng-container [ngSwitch]="actionSelector">
 
-            <div *ngSwitchCase="'Refund'" [item]="actionSelector">
-              <input type="text" class="form-control w-75 form-group text-muted" placeholder="Amount"
-                formControlName="refundAmount">
-              <div *ngIf="refundAmount.invalid && (refundAmount.dirty || refundAmount.touched)">
-                <div *ngIf="refundAmount.errors.pattern" class="error">Invalid Amount</div>
-              </div>
-              <textarea rows="3" class="form-control" placeholder="Remarks" formControlName="refundRemark"></textarea>
+                        <div *ngSwitchCase="'Refund'" [item]="actionSelector">
+                            <input type="text" class="form-control w-75 form-group text-muted" placeholder="Amount" formControlName="refundAmount">
+                            <div *ngIf="refundAmount.invalid && (refundAmount.dirty || refundAmount.touched)">
+                                <div *ngIf="refundAmount.errors.pattern" class="error">Invalid Amount</div>
+                            </div>
+                            <textarea rows="3" class="form-control" placeholder="Remarks" formControlName="refundRemark"></textarea>
+                        </div>
+
+                        <div *ngSwitchCase="'Topup'" [item]="actionSelector">
+                            <input type="text" class="form-control w-75 form-group text-muted" placeholder="Amount" formControlName="topupAmount">
+                            <div *ngIf="topupAmount.invalid && (topupAmount.dirty || topupAmount.touched)">
+                                <div *ngIf="topupAmount.errors.pattern" class="error">Invalid Amount</div>
+                            </div>
+                            <textarea rows="3" class="form-control" placeholder="Remarks" formControlName="topupRemark"></textarea>
+                        </div>
+
+                    </ng-container>
+                </div>
             </div>
+            <div class="row">
+                <div class="bg-light p-15 position-absolute pr-5 text-right w-100" style="bottom:0px;">
 
-            <div *ngSwitchCase="'Topup'" [item]="actionSelector">
-              <input type="text" class="form-control w-75 form-group text-muted" placeholder="Amount"
-                formControlName="topupAmount">
-              <div *ngIf="topupAmount.invalid && (topupAmount.dirty || topupAmount.touched)">
-                <div *ngIf="topupAmount.errors.pattern" class="error">Invalid Amount</div>
-              </div>
-              <textarea rows="3" class="form-control" placeholder="Remarks" formControlName="topupRemark"></textarea>
+                    <button type="button" class="btn bg-transparent border-0 w-25" (click)="cancelService(basketDetailForm.value.vehiclePlateNo)">Cancel</button>
+                    <button type="submit" class="bg-green btn text-white w-25">Update</button>
+                </div>
             </div>
-
-          </ng-container>
         </div>
-      </div>
-      <div class="row">
-        <div class="bg-light p-15 position-absolute pr-5 text-right w-100" style="bottom:0px;">
-          <button type="submit" class="bg-green btn text-white w-25">Update</button>
-          <button type="button" class="btn bg-transparent border-0 w-25"
-            (click)="cancelService(basketDetailForm.value.vehiclePlateNo)">Cancel</button>
-        </div>
-      </div>
     </div>
-  </div>
 </form>
